git feat 调整样式